--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ a.homer {
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img" src="Boys/img.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Los Angeles">
+      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Los Angeles">
 	  <div class="carousel-caption">
     <h3>WELCOME TO KATAVI INSTITUTE</h3>
     <p>FOR QUALITY EDUCATION</p>
