--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@ a.homer {
   </div>
     </div>
     <div class="carousel-item">
-      <img class="img" src="Girls/img2.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
+      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
 	  <div class="carousel-caption">
     <h3>Good learning environment</h3>
     <p>To initiate your understanding</p>
@@ -430,7 +430,7 @@ a.homer {
     </div>
 	
 	    <div class="carousel-item">
-      <img class="img" src="Boys/img3.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
+      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
 	  <div class="carousel-caption">
     <h3>Good learning environment</h3>
     <p>To initiate your understanding</p>
