--- a/index.html
+++ b/index.html
@@ -339,9 +339,7 @@ a.homer {
 </style>
 <body>
 
-   <div style="position: fixed; height: 100%;width: 100%;top: 0;left: 0;background: #fff;z-index: 99999;" class="loader">
-     <img id="loader" src="img/logo.png">
-   </div>
+  
 
  
 	
@@ -415,26 +413,17 @@ a.homer {
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Los Angeles">
-	  <div class="carousel-caption">
-    <h3>WELCOME TO KATAVI INSTITUTE</h3>
-    <p>FOR QUALITY EDUCATION</p>
-  </div>
+      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Nursery">
+	  
     </div>
     <div class="carousel-item">
-      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
-	  <div class="carousel-caption">
-    <h3>Good learning environment</h3>
-    <p>To initiate your understanding</p>
-  </div>
+      <img class="img" src="img/girls.JPG" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Girls" >
+	 
     </div>
 	
 	    <div class="carousel-item">
-      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
-	  <div class="carousel-caption">
-    <h3>Good learning environment</h3>
-    <p>To initiate your understanding</p>
-  </div>
+      <img class="img" src="img/boys.JPG" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Boys" >
+	 
     </div>
    
   </div>
@@ -962,13 +951,7 @@ function() {
 });
 </script>
 
-<script>
-$(window).on('load', function () {
-  setTimeout(function() { 
-      $(".loader").fadeOut(); 
-    }, 7000);
-});
-</script>
+
 
 
 <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
