--- a/index.html
+++ b/index.html
@@ -594,16 +594,16 @@ a.homer {
   <!-- The slideshow -->
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="img" src="Boys/img.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Los Angeles">
+      <img class="img" src="img/nursery.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Los Angeles">
 	  
     </div>
     <div class="carousel-item">
-      <img class="img" src="Girls/img2.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
+      <img class="img" src="img/girls.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
 	 
     </div>
 	
 	 <div class="carousel-item">
-      <img class="img" src="Boys/img3.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
+      <img class="img" src="img/boys.jpg" style='height: 100%; width: 100%; object-fit: cover; max-width: 100%; max-height: 100%;'  alt="Chicago" >
 	  
     </div>
    
